prepared application for deployment to heroku

--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
-{
+{"name":"web-server",
+  "version": "1.0.0",
+  "main":"app.js",
+  "scripts":{
+    "start": "node src/app.js"
+  },
   "dependencies": {
     "express": "^4.16.4",
     "hbs": "^4.0.1",
